# bloom-lisp

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  LANGUAGE_REFERENCE.md  Makefile.am  NEWS  PACKAGING.md  README.md  autogen.sh  bloom-lisp.pc.in  build.sh  configure.ac  ditty.pc.in
.github/workflows/: windows.yml
build-aux/: git-version.sh
cli/: Makefile.am  colors.h  main.c  repl_app.c  repl_app.h
doc/: arithmetic.md  characters.md  comparison.md  errors.md  file-io.md  filesystem.md  functions.md  hash-tables.md  lists.md  packages.md  printing.md  regex.md  string-ports.md  strings.md  symbols.md  time-and-profiling.md  type-predicates.md  vectors.md
emacs/: Makefile.am  bloom-lisp-mode-tests.el  bloom-lisp-mode.el  ditty-mode-tests.el  ditty-mode.el
flare/: Makefile.am  flare.c
include/: Makefile.am  file_utils.h  lineedit.h  lisp.h  lisp_value.h  utf8.h
include/bloom-lisp/: highlight.h
include/ditty/: highlight.h
lat/: Makefile.am  lat.c
lisp/: lisp-fmt.lisp
repl/: Makefile.am  colors.h  main.c  repl_app.c  repl_app.h
scripts/: build-mingw64.sh  gen-docstrings.sh  make-dist-zip.sh
src/: Makefile.am  builtins.c  builtins_arithmetic.c  builtins_characters.c  builtins_comparison.c  builtins_errors.c  builtins_file_io.c  builtins_filesystem.c  builtins_functions.c  builtins_hash_tables.c  builtins_internal.h  builtins_lists.c  builtins_packages.c  builtins_printing.c  builtins_regex.c  builtins_string_ports.c  builtins_strings.c  builtins_symbols.c  builtins_time_profiling.c  builtins_type_predicates.c  builtins_vectors.c  env.c  eval.c  file_utils.c  flare_color.c  flare_formatter.c  flare_formatter_terminal.c  flare_highlight.c  flare_lexer.c  flare_lexer_bloom_lisp.c  flare_lexer_commonmark.c  flare_lexer_ditty.c  flare_style.c  flare_style_dracula.c  flare_style_github_dark.c  flare_style_github_light.c  flare_style_monokai.c  flare_token_type.c  hash_table.c  lineedit.c  (+5 more)
tests/: Makefile.am  flare_testkit.h  run-test.sh  test-helpers.lisp  test_api.c  test_color.c  test_formatter.c  test_lexer.c  test_lexer_commonmark.c  test_repl_app.c  test_repl_completeness.c  test_roundtrip.c  test_sf_kind.c  test_style.c  test_token_type.c
tests/advanced/: collection_iteration.lisp  cond_case.lisp  condition-system.lisp  do_loop.lisp  docstrings.lisp  equality.lisp  file_io.lisp  introspection.lisp  let_star.lisp  lisp-fmt.lisp  load.lisp  macros.lisp  named_functions.lisp  optional-parameters.lisp  progn.lisp  quasiquote.lisp  regex.lisp  session-save.lisp  tail_recursion.lisp  utf8.lisp
tests/basic/: alists.lisp  and_or_list.lisp  apply.lisp  characters.lisp  filesystem.lisp  format.lisp  hash_tables.lisp  integer_ops.lisp  integers.lisp  keywords.lisp  length.lisp  list_reverse.lisp  packages.lisp  path_expansion.lisp  printing.lisp  recursion.lisp  string-index.lisp  string_number_conversion.lisp  string_ports.lisp  strings.lisp  symbols.lisp  vectors.lisp
tests/regression/: cond_case_multi_expr.lisp  list_ref_type_check.lisp  multiline_parsing.lisp  nested-unknown-hash-syntax.lisp  tail_call_unwrap.lisp
