ACLOCAL_AMFLAGS = -I m4

SUBDIRS = include src repl tests

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = bloom-lisp.pc

EXTRA_DIST = \
    autogen.sh \
    bloom-lisp.pc.in \
    README.md \
    LANGUAGE_REFERENCE.md \
    lisp/lisp-fmt.lisp \
    scripts/gen-docstrings.sh \
    doc/arithmetic.md \
    doc/characters.md \
    doc/comparison.md \
    doc/errors.md \
    doc/file-io.md \
    doc/filesystem.md \
    doc/functions.md \
    doc/hash-tables.md \
    doc/lists.md \
    doc/packages.md \
    doc/printing.md \
    doc/regex.md \
    doc/string-ports.md \
    doc/strings.md \
    doc/symbols.md \
    doc/time-and-profiling.md \
    doc/type-predicates.md \
    doc/vectors.md
